fix: align text to start in question card

--- a/src/features/question-banks/components/question-card/question-card.module.scss
+++ b/src/features/question-banks/components/question-card/question-card.module.scss
@@ -12,6 +12,7 @@
     display: flex;
     gap: 12px;
     color: var(--color-text);
+    text-align: start;
     &__icon {
       transform: rotate(90deg);
       &--active {
